--- a/index.html
+++ b/index.html
@@ -275,7 +275,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="  courses-item d-flex flex-column bg-white overflow-hidden h-100">
                             <div class="card text-center p-4 pt-0">
@@ -292,8 +291,7 @@
                             </div>
                         </div>
                     </div>
-
-                            <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="  courses-item d-flex flex-column bg-white overflow-hidden h-100">
                             <div class="card text-center p-4 pt-0">
                                 <h5 class="mb-3">Rendez-vous d'accompagnement</h5>
@@ -309,8 +307,7 @@
                             </div>
                         </div>
                     </div>
-
-                                       <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="  courses-item d-flex flex-column bg-white overflow-hidden h-100">
                             <div class="card text-center p-4 pt-0">
                                 <h5 class="mb-3">Créations vidéo</h5>
@@ -326,172 +323,144 @@
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
             <!-- Courses End -->
             <!-- Team Start -->
-            <!--
-        <div class="container-xxl py-6">
-            <div class="container">
-                <div
-                    class="text-center mx-auto mb-5 wow fadeInUp"
-                    data-wow-delay="0.1s"
-                    style="max-width: 500px"
-                >
-                    <h6 class="text-primary text-uppercase mb-2">
-                        Meet The Team
-                    </h6>
-                    <h1 class="display-6 mb-4">
+            <div class="container-xxl py-6">
+                <div class="container">
+                    <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px">
+                        <h6 class="text-primary text-uppercase mb-2">
+                            Notre équipe
+                        </h6>
+                        <!--
+                                        <h1 class="display-6 mb-4">
                         We Have Great Experience Of Driving
                     </h1>
-                </div>
-                <div class="row g-0 team-items">
-                    <div
-                        class="col-lg-3 col-md-6 wow fadeInUp"
-                        data-wow-delay="0.1s"
-                    >
-                        <div class="team-item position-relative">
-                            <div class="position-relative">
-                                <img
-                                    class="img-fluid"
-                                    src="img/team-1.jpg"
-                                    alt=""
-                                />
-                                <div class="team-social text-center">
-                                    <a
-                                        class="btn btn-square btn-outline-primary border-2 m-1"
-                                        href=""
-                                        ><i class="fab fa-facebook-f"></i
-                                    ></a>
-                                    <a
-                                        class="btn btn-square btn-outline-primary border-2 m-1"
-                                        href=""
-                                        ><i class="fab fa-twitter"></i
-                                    ></a>
-                                    <a
-                                        class="btn btn-square btn-outline-primary border-2 m-1"
-                                        href=""
-                                        ><i class="fab fa-instagram"></i
-                                    ></a>
-                                </div>
-                            </div>
-                            <div class="bg-light text-center p-4">
-                                <h5 class="mt-2">Full Name</h5>
-                                <span>Trainer</span>
-                            </div>
-                        </div>
+                    <-->
                     </div>
-                    <div
-                        class="col-lg-3 col-md-6 wow fadeInUp"
-                        data-wow-delay="0.3s"
-                    >
-                        <div class="team-item position-relative">
-                            <div class="position-relative">
-                                <img
-                                    class="img-fluid"
-                                    src="img/team-2.jpg"
-                                    alt=""
-                                />
-                                <div class="team-social text-center">
-                                    <a
-                                        class="btn btn-square btn-outline-primary border-2 m-1"
-                                        href=""
-                                        ><i class="fab fa-facebook-f"></i
-                                    ></a>
-                                    <a
-                                        class="btn btn-square btn-outline-primary border-2 m-1"
-                                        href=""
-                                        ><i class="fab fa-twitter"></i
-                                    ></a>
-                                    <a
-                                        class="btn btn-square btn-outline-primary border-2 m-1"
-                                        href=""
-                                        ><i class="fab fa-instagram"></i
-                                    ></a>
+                    <div class="row g-0 team-items">
+
+
+                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                            <div class="team-item position-relative">
+                                <div class="position-relative">
+                                    <img class="img-fluid" src="img/team-1.webp" alt="" />
+                                    <div class="team-social text-center">
+
+                                        <p class="memberDes">
+                                            Bonjour, je suis un super humain et jaime les chatons
+                                        </p>
+
+                                    </div>
+                                </div>
+                                <div class="bg-light text-center p-4">
+                                    <h5 class="mt-2">Marine Moreau</h5>
+                                    <span>Responsable d'équipe & ingénieure pédagogique</span>
                                 </div>
                             </div>
-                            <div class="bg-light text-center p-4">
-                                <h5 class="mt-2">Full Name</h5>
-                                <span>Trainer</span>
-                            </div>
                         </div>
-                    </div>
-                    <div
-                        class="col-lg-3 col-md-6 wow fadeInUp"
-                        data-wow-delay="0.5s"
-                    >
-                        <div class="team-item position-relative">
-                            <div class="position-relative">
-                                <img
-                                    class="img-fluid"
-                                    src="img/team-3.jpg"
-                                    alt=""
-                                />
-                                <div class="team-social text-center">
-                                    <a
-                                        class="btn btn-square btn-outline-primary border-2 m-1"
-                                        href=""
-                                        ><i class="fab fa-facebook-f"></i
-                                    ></a>
-                                    <a
-                                        class="btn btn-square btn-outline-primary border-2 m-1"
-                                        href=""
-                                        ><i class="fab fa-twitter"></i
-                                    ></a>
-                                    <a
-                                        class="btn btn-square btn-outline-primary border-2 m-1"
-                                        href=""
-                                        ><i class="fab fa-instagram"></i
-                                    ></a>
+
+                                      <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                            <div class="team-item position-relative">
+                                <div class="position-relative">
+                                    <img class="img-fluid" src="img/team-2.webp" alt="" />
+                                    <div class="team-social text-center">
+                                        <p class="memberDes">
+                                            Bonjour, je suis un super humain et jaime les chatons
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="bg-light text-center p-4">
+                                    <h5 class="mt-2">Marina O</h5>
+                                                                        <span>Assistante ingénieure pédagogique</span>
+
                                 </div>
                             </div>
-                            <div class="bg-light text-center p-4">
-                                <h5 class="mt-2">Full Name</h5>
-                                <span>Trainer</span>
-                            </div>
                         </div>
-                    </div>
-                    <div
-                        class="col-lg-3 col-md-6 wow fadeInUp"
-                        data-wow-delay="0.7s"
-                    >
-                        <div class="team-item position-relative">
-                            <div class="position-relative">
-                                <img
-                                    class="img-fluid"
-                                    src="img/team-4.jpg"
-                                    alt=""
-                                />
-                                <div class="team-social text-center">
-                                    <a
-                                        class="btn btn-square btn-outline-primary border-2 m-1"
-                                        href=""
-                                        ><i class="fab fa-facebook-f"></i
-                                    ></a>
-                                    <a
-                                        class="btn btn-square btn-outline-primary border-2 m-1"
-                                        href=""
-                                        ><i class="fab fa-twitter"></i
-                                    ></a>
-                                    <a
-                                        class="btn btn-square btn-outline-primary border-2 m-1"
-                                        href=""
-                                        ><i class="fab fa-instagram"></i
-                                    ></a>
+
+
+              <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                            <div class="team-item position-relative">
+                                <div class="position-relative">
+                                    <img class="img-fluid" src="img/team-3.webp" alt="" />
+                                    <div class="team-social text-center">
+                                        <p class="memberDes">
+                                            Bonjour, je suis un super humain et jaime les chatons
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="bg-light text-center p-4">
+                                    <h5 class="mt-2">Coralie Allanet</h5>
+                                    <span>Assistante ingénieure pédagogique</span>
                                 </div>
                             </div>
-                            <div class="bg-light text-center p-4">
-                                <h5 class="mt-2">Full Name</h5>
-                                <span>Trainer</span>
+                        </div>
+
+
+              <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                            <div class="team-item position-relative">
+                                <div class="position-relative">
+                                    <img class="img-fluid" src="img/team-4.webp" alt="" />
+                                    <div class="team-social text-center">
+                                        <p class="memberDes">
+                                            Bonjour, je suis un super humain et jaime les chatons
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="bg-light text-center p-4">
+                                    <h5 class="mt-2">Tom Servière</h5>
+                                    <span>Ingénieur scénariste</span>
+                                </div>
                             </div>
                         </div>
+
+
+              <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                            <div class="team-item position-relative">
+                                <div class="position-relative">
+                                    <img class="img-fluid" src="img/team-5.webp" alt="" />
+                                    <div class="team-social text-center">
+                                        <p class="memberDes">
+                                            Bonjour, je suis un super humain et jaime les chatons
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="bg-light text-center p-4">
+                                    <h5 class="mt-2">Gillian Brousse</h5>
+                                    <span>UI / UX designer</span>
+                                </div>
+                            </div>
+                        </div>
+
+
+              <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                            <div class="team-item position-relative">
+                                <div class="position-relative">
+                                    <img class="img-fluid" src="img/team-6.webp" alt="" />
+                                    <div class="team-social text-center">
+                                        <p class="memberDes">
+                                            Bonjour, je suis un super humain et jaime les chatons
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="bg-light text-center p-4">
+                                    <h5 class="mt-2">Xavier Moulin</h5>
+                                    <span>Chef de projet</span>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+
+                  
+
+
+
                     </div>
                 </div>
             </div>
-        </div>
-        <-->
             <!-- Team End -->
             <!-- Testimonial Start -->
             <!--
