--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         <div class="h-100">
                             <h1 class="display-6 mb-4 aboutTitle">
                                 Le SNAP vous accompagne
-                            </h1>                            
+                            </h1>
                             <p>
                                 Le Service Numérique & d’Accompagnement Pédagogique (SNAP) a pour objectif de <strong>soutenir les enseignants et les enseignants-chercheurs</strong> dans leurs projets pédagogiques avec le numérique comme outil facilitateur.
                             </p>
@@ -312,7 +312,8 @@
                                 <div class="event col-lg-12 shadow">
                                     <div class="eventHeader">
                                         <i class="fa fa-calendar"></i>
-                                        <p>Atelier MOODLE</p><p class="date">04/05/2023</p>
+                                        <p>Atelier MOODLE</p>
+                                        <p class="date">04/05/2023</p>
                                     </div>
                                     <div class="eventSub">
                                         <img class="img-fluid" src="img/about-4.webp" alt="" />
@@ -373,7 +374,6 @@
                 </h1>
             </div>
             <div class=" row g-4 justify-content-center cardRow">
-
                 <!-- first Tool item start-->
                 <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
@@ -392,9 +392,7 @@
                         </div>
                     </div>
                 </div>
-
                 <!--first Tool item end-->
-
                 <!--Tool item start-->
                 <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
@@ -558,155 +556,150 @@
                 <div class="row g-0 team-items">
                     <div class="col-lg-12 col-md-12 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="teamSubW shadow">
-<!--
+                            <!--
                             <P class="teamSub">
                                 L’équipe du SNAP ressemble à un équipage de vaisseau, si chacun amène son expertise, tous regardent dans la même direction afin de mener les projets à bon port :
                             </P>
                             <-->
-
                             <div class="teamSubWUnder">
                                 <img src="./img/Ico3.webp" class="iconIntro" alt="Acompagnement numérique" />
                                 <p>
                                     Des <strong>Ingénieures pédagogiques</strong> pour comprendre les enjeux de la transmission de connaissance et accompagner les enseignants en leur proposant des solutions innovantes et adaptées.
                                 </p>
                             </div>
-
                             <div class="teamSubWUnder">
                                 <img src="./img/Ico2.webp" class="iconIntro" alt="Acompagnement numérique" />
                                 <p>
                                     Un <strong>Ingénieur scénariste</strong>, à même de ludifier les activités numériques et d’optimiser la trame de votre parcours pédagogique pour maximiser l’engagement des apprenants.
                                 </p>
                             </div>
-
                             <div class="teamSubWUnder">
                                 <img src="./img/Ico1.webp" class="iconIntro" alt="Acompagnement numérique" />
                                 <p>
                                     Un <strong>UI / UX designer</strong>, afin de s’assurer que l’expérience numérique soit aussi efficiente qu’agréable pour les enseignants comme les étudiants.
                                 </p>
                             </div>
-
                             <div class="teamSubWUnder">
                                 <img src="./img/Ico4.webp" class="iconIntro" alt="Acompagnement numérique" />
                                 <p>
                                     Un <strong>Chef de projet numérique</strong>, pour coordonner les actions et pérenniser les missions innovantes.
                                 </p>
                             </div>
-
                         </div>
                     </div>
-                        <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                            <div class="team-item shadow position-relative">
-                                <div class="position-relative teamImgWrap">
-                                    <img class="img-fluid" src="img/team-1.webp" alt="" />
-                                    <div class="team-social text-center">
-                                        <p class="memberDes">
-                                            Dolores sed duo clita tempor justo dolor et
-                                            stet lorem kasd labore dolore lorem ipsum.
-                                            At lorem lorem magna ut et, nonumy et labore
-                                            et tempor diam tempor erat.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="bg-light text-center p-4">
-                                    <h5 class="mt-2">Marine Moreau</h5>
-                                    <span>Responsable d'équipe & ingénieure pédagogique</span>
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="team-item shadow position-relative">
+                            <div class="position-relative teamImgWrap">
+                                <img class="img-fluid" src="img/team-1.webp" alt="" />
+                                <div class="team-social text-center">
+                                    <p class="memberDes">
+                                        Dolores sed duo clita tempor justo dolor et
+                                        stet lorem kasd labore dolore lorem ipsum.
+                                        At lorem lorem magna ut et, nonumy et labore
+                                        et tempor diam tempor erat.
+                                    </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                            <div class="team-item shadow position-relative">
-                                <div class="position-relative teamImgWrap">
-                                    <img class="img-fluid" src="img/team-2.webp" alt="" />
-                                    <div class="team-social text-center">
-                                        <p class="memberDes">
-                                            Dolores sed duo clita tempor justo dolor et
-                                            stet lorem kasd labore dolore lorem ipsum.
-                                            At lorem lorem magna ut et, nonumy et labore
-                                            et tempor diam tempor erat.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="bg-light text-center p-4">
-                                    <h5 class="mt-2">Marina O</h5>
-                                    <span>Assistante ingénieure pédagogique</span>
-                                </div>
+                            <div class="bg-light text-center p-4">
+                                <h5 class="mt-2">Marine Moreau</h5>
+                                <span>Responsable d'équipe & ingénieure pédagogique</span>
                             </div>
                         </div>
-                        <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                            <div class="team-item shadow position-relative">
-                                <div class="position-relative teamImgWrap">
-                                    <img class="img-fluid" src="img/team-3.webp" alt="" />
-                                    <div class="team-social text-center">
-                                        <p class="memberDes">
-                                            Dolores sed duo clita tempor justo dolor et
-                                            stet lorem kasd labore dolore lorem ipsum.
-                                            At lorem lorem magna ut et, nonumy et labore
-                                            et tempor diam tempor erat.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="bg-light text-center p-4">
-                                    <h5 class="mt-2">Coralie Allanet</h5>
-                                    <span>Assistante ingénieure pédagogique</span>
+                    </div>
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="team-item shadow position-relative">
+                            <div class="position-relative teamImgWrap">
+                                <img class="img-fluid" src="img/team-2.webp" alt="" />
+                                <div class="team-social text-center">
+                                    <p class="memberDes">
+                                        Dolores sed duo clita tempor justo dolor et
+                                        stet lorem kasd labore dolore lorem ipsum.
+                                        At lorem lorem magna ut et, nonumy et labore
+                                        et tempor diam tempor erat.
+                                    </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                            <div class="team-item shadow position-relative">
-                                <div class="position-relative teamImgWrap">
-                                    <img class="img-fluid" src="img/team-4.webp" alt="" />
-                                    <div class="team-social text-center">
-                                        <p class="memberDes">
-                                            Dolores sed duo clita tempor justo dolor et
-                                            stet lorem kasd labore dolore lorem ipsum.
-                                            At lorem lorem magna ut et, nonumy et labore
-                                            et tempor diam tempor erat.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="bg-light text-center p-4">
-                                    <h5 class="mt-2">Tom Servière</h5>
-                                    <span>Ingénieur scénariste</span>
-                                </div>
+                            <div class="bg-light text-center p-4">
+                                <h5 class="mt-2">Marina O</h5>
+                                <span>Assistante ingénieure pédagogique</span>
                             </div>
                         </div>
-                        <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                            <div class="team-item shadow position-relative">
-                                <div class="position-relative teamImgWrap">
-                                    <img class="img-fluid" src="img/team-5.webp" alt="" />
-                                    <div class="team-social text-center">
-                                        <p class="memberDes">
-                                            Passionné de S-F, j'écris et j'illustre dans les domaines de l'imaginaire quand je ne suis pas scotché devant un bon nanar cinématographique des années 80...
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="bg-light text-center p-4">
-                                    <h5 class="mt-2">Gillian Brousse</h5>
-                                    <span>UI / UX designer</span>
+                    </div>
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="team-item shadow position-relative">
+                            <div class="position-relative teamImgWrap">
+                                <img class="img-fluid" src="img/team-3.webp" alt="" />
+                                <div class="team-social text-center">
+                                    <p class="memberDes">
+                                        Dolores sed duo clita tempor justo dolor et
+                                        stet lorem kasd labore dolore lorem ipsum.
+                                        At lorem lorem magna ut et, nonumy et labore
+                                        et tempor diam tempor erat.
+                                    </p>
                                 </div>
                             </div>
+                            <div class="bg-light text-center p-4">
+                                <h5 class="mt-2">Coralie Allanet</h5>
+                                <span>Assistante ingénieure pédagogique</span>
+                            </div>
                         </div>
-                        <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                            <div class="team-item shadow position-relative">
-                                <div class="position-relative teamImgWrap">
-                                    <img class="img-fluid" src="img/team-6.webp" alt="" />
-                                    <div class="team-social text-center">
-                                        <p class="memberDes">
-                                            Dolores sed duo clita tempor justo dolor et
-                                            stet lorem kasd labore dolore lorem ipsum.
-                                            At lorem lorem magna ut et, nonumy et labore
-                                            et tempor diam tempor erat.
-                                        </p>
-                                    </div>
+                    </div>
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+                        <div class="team-item shadow position-relative">
+                            <div class="position-relative teamImgWrap">
+                                <img class="img-fluid" src="img/team-4.webp" alt="" />
+                                <div class="team-social text-center">
+                                    <p class="memberDes">
+                                        Dolores sed duo clita tempor justo dolor et
+                                        stet lorem kasd labore dolore lorem ipsum.
+                                        At lorem lorem magna ut et, nonumy et labore
+                                        et tempor diam tempor erat.
+                                    </p>
                                 </div>
-                                <div class="bg-light text-center p-4">
-                                    <h5 class="mt-2">Xavier Moulin</h5>
-                                    <span>Responsable du service & Chef de projet</span>
+                            </div>
+                            <div class="bg-light text-center p-4">
+                                <h5 class="mt-2">Tom Servière</h5>
+                                <span>Ingénieur scénariste</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                        <div class="team-item shadow position-relative">
+                            <div class="position-relative teamImgWrap">
+                                <img class="img-fluid" src="img/team-5.webp" alt="" />
+                                <div class="team-social text-center">
+                                    <p class="memberDes">
+                                        Passionné de S-F, j'écris et j'illustre dans les domaines de l'imaginaire quand je ne suis pas scotché devant un bon nanar cinématographique des années 80...
+                                    </p>
                                 </div>
+                            </div>
+                            <div class="bg-light text-center p-4">
+                                <h5 class="mt-2">Gillian Brousse</h5>
+                                <span>UI / UX designer</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+                        <div class="team-item shadow position-relative">
+                            <div class="position-relative teamImgWrap">
+                                <img class="img-fluid" src="img/team-6.webp" alt="" />
+                                <div class="team-social text-center">
+                                    <p class="memberDes">
+                                        Dolores sed duo clita tempor justo dolor et
+                                        stet lorem kasd labore dolore lorem ipsum.
+                                        At lorem lorem magna ut et, nonumy et labore
+                                        et tempor diam tempor erat.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="bg-light text-center p-4">
+                                <h5 class="mt-2">Xavier Moulin</h5>
+                                <span>Responsable du service & Chef de projet</span>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
         <!--FOOTER-->
         <footer class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 wow fadeIn" data-wow-delay="0.1s">
